--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,17 @@
   background-position: center;
   background-size: cover;
 }
+
+@theme {
+  --animate-blink: 'blink 1s ease-in-out infinite';
+
+  @keyframes blink {
+    0%, 
+    100% { 
+      opacity: 1; 
+    }
+    50% { 
+    opacity: 0.5; 
+    }
+  }
+}
